--- a/main_ui.html
+++ b/main_ui.html
@@ -1,21 +1,63 @@
 <div style="background-image:url('blue.jpg');width:100%;height:100%;solid black;">
 <html>
-<title> Papapa </title>
+<title> Main Page </title>
 <div class="personal_info" align="right">
 <h5> <font color = "white"> Name: user.getName() </h5>
+<a href="address"><font color = "yellow">Logout</a>
 </div>
+
 <form method="post" action="a.jsp">
-<div class="search" align= "left">
-<input type="text" name="query.name" class="search" placeholder="Search photos.." style="text-align:left;float:left;"/>
-<input type="submit" name="search_photo" value="Search Photo">
+<div class="search_photo">
+&ensp;&ensp;&ensp;<input type="text" name="search_photo" class="search" placeholder="Search photos.." />
+<input type="submit" name="search_photo" value="Search Photos">
+</div>
+</form>
+
+<div class="left_part" style="float:left">
+&ensp;<h3> <font color = "white"> Friends </h3>
+<form method="post" action="a.jsp">
+<div style="width:300px;height:600px;line-height:3em;overflow:scroll;padding:5px;">
+<div align="center">
+<a href="address"><font color = "yellow">Jack</a><br>
+<a href="address"><font color = "yellow">Maria</a><br>
+<a href="address"><font color = "yellow">Will</a><br>
+<a href="address"><font color = "yellow">Dylan</a><br>
+<a href="address"><font color = "yellow">1</a><br>
+<a href="address"><font color = "yellow">2</a><br>
+<a href="address"><font color = "yellow">3</a><br>
+<a href="address"><font color = "yellow">4</a><br>
+<a href="address"><font color = "yellow">5</a><br>
+<a href="address"><font color = "yellow">6</a><br>
+<a href="address"><font color = "yellow">7</a><br>
+<a href="address"><font color = "yellow">8</a><br>
+<a href="address"><font color = "yellow">9</a><br>
+<a href="address"><font color = "yellow">10</a><br>
+<a href="address"><font color = "yellow">11</a><br>
+</div>
+</div>
+
+&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;<input type="submit" name="groups" value="Groups" style="height:50px; width:150px"><br>
 </form>
 
 <form method="post" action="a.jsp">
-<input type="submit" name="search_photo" value="Search Friends" style="text-align:left;float:right;">
-<input type="text" name="query.name" class="search" placeholder="Search friends.." style="text-align:right;float:right;"/>
+<div class="search_user">
+&ensp;<input type="text" name="search_user" class="search" placeholder="Search users.." style="text-align:left;float:left;"/>
+<input type="submit" name="search_user" value="Search Users">
+</div>
 </form>
 </div>
 
 
+<div class="right_part" style="float:right">
+<div align="center">
+<h3> <font color ="white"> Personal Photos </h3>
+<div style="width:1500px;height:750px;line-height:3em;overflow:scroll;padding:5px;">
+<form action="demo_form.asp">
+<input type="file" name="pic" accept="image/*">
+<form method="post" action="a.jsp">
+<input type="submit" value="Upload" style="height:50px; width:150px">
+</form>
+</div>
+</div>
+</div>
 </html>
-
