--- a/admin_ui.html
+++ b/admin_ui.html
@@ -1,4 +1,17 @@
 <div style="background-image:url('blue.jpg');width:100%;height:100%;solid black;">
 <html>
+<title> Admin Page </title>
+<div class="personal_info" align="right">
+<h5> <font color = "white"> Name: Admin </h5>
+</div>
 
+<div class="OLAP" align="center">
+<br><br>
+<h1> OLAP Report</h1>
+<p style="padding:6px; color: black; background-color: white; border: black 2px solid; width:600px;height:400px;">
+
+<form method="post" action="a.jsp">
+<input type="image" src="back.jpg" alt="Back" width="100" height="60">
+</form>
+</div>
 </html>
