--- a/group_ui.html
+++ b/group_ui.html
@@ -1,4 +1,34 @@
 <div style="background-image:url('blue.jpg');width:100%;height:100%;solid black;">
 <html>
+<title> Groups </title>
 
+<div align="center">
+<br><br>
+<h1><font color = "white"> Groups</h1>	
+
+<div class="default">
+<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
+Default<br>
+</div>
+
+<div class="default">
+<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
+Family<br>
+</div>
+
+<div class="default">
+<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
+Friends<br>
+</div>
+
+<div class="default">
+<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
+Lover<br>
+</div>
+<form method="post" action="a.jsp">
+<div class="back">
+<input type="image" src="back.jpg" alt="Back" width="100" height="60">
+</div>
+</form>
+</div>
 </html>
