--- a/owner_image_ui.html
+++ b/owner_image_ui.html
@@ -14,7 +14,8 @@ For image part
 <h2>Time &emsp;&emsp;&emsp;&emsp;&emsp;<input type="text" name="time" value=""></h2>
 <h2>Description &emsp;<input type="text" name="description" value=""></h2><br>
 <h3><input type="radio" name="sex" value="private" checked> Private
-<input type="radio" name="sex" value="public" onclick="myFunction()"> Public</h3>
+<input type="radio" name="sex" value="public" onclick="myFunction()"> Public
+<input type="radio" name="sex" value="others" onclick="myFunction()"> Others</h3>
 
 <div class="choice">
 <select id="public">
