--- a/main_ui.html
+++ b/main_ui.html
@@ -14,38 +14,29 @@
 </form>
 
 <div class="left_part" style="float:left">
-&ensp;<h3> <font color = "white"> Friends </h3>
+&ensp;<h3> <font color = "white"> Groups </h3>
 <form method="post" action="a.jsp">
 <div style="width:300px;height:600px;line-height:3em;overflow:scroll;padding:5px;">
 <div align="center">
-<a href="address"><font color = "yellow">Jack</a><br>
-<a href="address"><font color = "yellow">Maria</a><br>
-<a href="address"><font color = "yellow">Will</a><br>
-<a href="address"><font color = "yellow">Dylan</a><br>
-<a href="address"><font color = "yellow">1</a><br>
-<a href="address"><font color = "yellow">2</a><br>
-<a href="address"><font color = "yellow">3</a><br>
-<a href="address"><font color = "yellow">4</a><br>
-<a href="address"><font color = "yellow">5</a><br>
-<a href="address"><font color = "yellow">6</a><br>
-<a href="address"><font color = "yellow">7</a><br>
-<a href="address"><font color = "yellow">8</a><br>
-<a href="address"><font color = "yellow">9</a><br>
-<a href="address"><font color = "yellow">10</a><br>
-<a href="address"><font color = "yellow">11</a><br>
+<a href="address"><font color = "yellow">Family</a><br>
+<a href="address"><font color = "yellow">Friend</a><br>
+<a href="address"><font color = "yellow">Lover</a><br>
+<a href="address"><font color = "yellow">Default</a><br>
 </div>
 </div>
 
-&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;<input type="submit" name="groups" value="Groups" style="height:50px; width:150px"><br>
-</form>
 
 <form method="post" action="a.jsp">
-<div class="search_user">
-&ensp;<input type="text" name="search_user" class="search" placeholder="Search users.." style="text-align:left;float:left;"/>
-<input type="submit" name="search_user" value="Search Users">
-</div>
+&ensp;&ensp;&ensp;&ensp;<input type="submit" name="add" value="Add">
+
+<form method="post" action="a.jsp">
+&ensp;<input type="submit" name="delete" value="Delete">
+
+<form method="post" action="a.jsp">
+&ensp;<input type="submit" name="rename" value="Rename">
 </form>
 </div>
+
 
 
 <div class="right_part" style="float:right">
