--- a/search_ui.html
+++ b/search_ui.html
@@ -4,7 +4,8 @@
 <div class="result" align="center">
 <br><br><br>
 <h1> <font color = "white">Search Result </h1>
-<div style="width:1300px;height:600px;line-height:3em;overflow:scroll;padding:5px;">
+<div style="width:1300px;height:600px;line-height:3em;overflow:scroll;padding:5px;" align="left">
+<img src="view.jpg" alt="View" style="width:304px;height:228px;">
 </div>
 <form method="post" action="a.jsp">
 <br><br>
