--- a/main.html
+++ b/main.html
@@ -27,13 +27,12 @@
 
 
 <form method="post" action="a.jsp">
-&ensp;&ensp;&ensp;&ensp;<input type="submit" name="add" value="Add">
-
+<input type="text" name="add" class="add" placeholder="Add Group.." />
+&ensp;&ensp;<input type="submit" name="add" value="Add" style="width:70px">
+</form>
 <form method="post" action="a.jsp">
-&ensp;<input type="submit" name="delete" value="Delete">
-
-<form method="post" action="a.jsp">
-&ensp;<input type="submit" name="rename" value="Rename">
+<input type="text" name="delete" class="delete" placeholder="Delete Group.." />
+&ensp;&ensp;<input type="submit" name="delete" value="Delete">
 </form>
 </div>
 
