--- a/group_ui.html
+++ b/group_ui.html
@@ -6,25 +6,41 @@
 <br><br>
 <h1><font color = "white"> Groups</h1>	
 
-<div class="default">
-<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
-Default<br>
+<div style="width:1200px;height:600px;line-height:3em;overflow:scroll;padding:5px;">
+<table>
+    <colgroup>
+        <col style="text-align:right" />
+        <col style="text-align:center" />
+        <col style="text-align:left" />
+    </colgroup>
+    <tr>
+		<div class="default">
+        <td><p style="overflow:scroll;padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:300px;height:500px;">
+		<font size="6">Default</font>
+		</td>
+		
+		<div class="family">
+        <td><p style="overflow:scroll;padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:300px;height:500px;">
+		<font size="6">Family</font>
+		</td>
+		
+		<div class="friend">
+        <td><p style="overflow:scroll;padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:300px;height:500px;">
+		<font size="6">Friend</font>
+		</td>
+		
+		<div class="lover">
+		<td><p style="overflow:scroll;padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:300px;height:500px;">
+		<font size="6">Lover</font>
+		</td>
+		</div>
+		</div>
+		</div>
+		</div>
+    </tr>
+</table>
 </div>
 
-<div class="default">
-<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
-Family<br>
-</div>
-
-<div class="default">
-<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
-Friends<br>
-</div>
-
-<div class="default">
-<p style="padding:6px; color: white; background-color: transparent; border: yellow 2px solid; width:80%;height:15%;">
-Lover<br>
-</div>
 <form method="post" action="a.jsp">
 <div class="back">
 <input type="image" src="back.jpg" alt="Back" width="100" height="60">
