--- a/owner_image_ui.html
+++ b/owner_image_ui.html
@@ -30,8 +30,10 @@ For image part
 
 <br>
 <form method="post" action="a.jsp">
-<input type="image" src="save.png" alt="Save" width="100" height="48">
+<input type="image" src="save.png" alt="Save" width="100" height="60">
 
+<form method="post" action="a.jsp">
+<input type="image" src="delete.png" alt="Save" width="100" height="60">
 
 <form method="post" action="a.jsp">
 <input type="image" src="back.jpg" alt="Save" width="100" height="60">
