--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <h2>
 <br><br>
  User Name <input type="text" name="user_name" value=""><br>
- Password  &nbsp&nbsp<input type="password" name="psw" value=""><br>
+ Password  &nbsp;<input type="password" name="psw" value=""><br>
 <input type="submit" name="submit"  value="Log In">
 <input type="submit" name="Signup" value = "Sign Up" onclick = "send.action='signup.html'">
 </h2>
