--- a/main.html
+++ b/main.html
@@ -51,7 +51,13 @@
 <input type="submit" value="Upload" style="height:50px; width:150px">
 </form>
 </div>
+<div class="document" align="right">
+<br><br>
+<a href="address"><font color = "yellow">User Documentation</a><br>
 </div>
 </div>
+</div>
+
+
 </html>
 
